finished shell game

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h2>Shells</h2>
                 <ul class="shells triplet">
                     <li>
-                        <div id="pearl-1" class="pearl"></div>
+                        <div id="pearl-1" class="pearl hidden"></div>
                         <img id="shell-1" class="reveal" src="assets/shell.png" alt="shell 1" />
                     </li>
                     <li>
@@ -67,12 +67,10 @@
 
                 <section id="results">
                     <div class="triplet">
-                        <p id="display-1">Not here!</p>
                         <p id="display-2"></p>
-                        <p id="display-3">Found it!</p>
                     </div>
 
-                    <button id="play-again-button">Play Again</button>
+                    <button class="hidden" id="play-again-button">Play Again</button>
                 </section>
             </section>
         </main>
